# aws-serverless-experiment

./: .gitignore  README.md  pyproject.toml  simulate_events.py  template.yaml
.github/workflows/: build_and_deploy_images.yml  workflow.yml
config/: dev.yaml  local.yaml
events/: kineses_valid_event.json
notebooks/: Modeling.ipynb  data exploration.ipynb
notes/: machine_learning.md  understanding_the_problem.md
resources/: iam-stack.yaml  kinesis-stream-stack.yaml  lambda-stack.yaml  s3-stack.yaml
src/fraud_detection_model/: Dockerfile  app.py
src/validation-lambda/: app.py  requirements.txt
src/validation_lambda/: Dockerfile  app.py  requirements.txt
tests/validation_lambda/: test_app.py
utils/: data_gen.py  simulate_events.py
validation-lambda/: Dockerfile  app.py
