[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "awscli",
    "boto3>=1.36.16",
    "pandas>=2.2.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "moto[all,lambda]>=5.0.28",
]

[tool.pytest.ini_options]
pythonpath = ["."]
